fix text-overflow

--- a/css/modfiles.css
+++ b/css/modfiles.css
@@ -4,7 +4,7 @@
     margin-right: auto;
 }
 
-.overflow-elipsis,
+.text-overflow,
 .db {
     display: block;
 }
@@ -20,6 +20,12 @@
 
 .dn {
     display: none;
+}
+
+.text-overflow {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 .transform-middle,
